--- a/centro-medico-app/backend/.env
+++ b/centro-medico-app/backend/.env
@@ -1,21 +1,31 @@
-# Configuración de la Base de Datos
-# Configuración de la base de datos
+﻿# Configuracion de la base de datos
 DB_NAME=asocrista_db
-DB_USER=asocrista_user
-DB_PASSWORD=asocrista123
+DB_USER=aso_user
+DB_PASSWORD=myaVERO25
 DB_HOST=localhost
 DB_PORT=3306
 
-# Configuración del servidor
+# Configuracion del servidor
 PORT=3000
 NODE_ENV=development
 
 JWT_SECRET=centro_medico_jwt_secret_2024_muy_seguro
 
-
-# Configuración de Email (opcional por ahora)
+# Configuracion de Email
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=asocrista@gmail.com
 EMAIL_PASS=asocrista123
 PROPIETARIO_EMAIL=propietario@email.com
+
+# Email especifico para reportes diarios
+REPORTES_EMAIL=santosgrmz0@gmail.com
+
+# Configuracion SMTP para envio de emails
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=asocrista@gmail.com
+SMTP_PASS=asocrista123
+
+# Configuracion de CORS
+CORS_ORIGIN=http://localhost:3000
