--- a/centro-medico-app/backend/package.json
+++ b/centro-medico-app/backend/package.json
@@ -5,15 +5,18 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "reportes": "node iniciar-reportes.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "expo": "^54.0.8",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
@@ -21,7 +24,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.11.0",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.6",
+    "nodemailer": "^6.9.8",
     "puppeteer": "^24.20.0",
     "sequelize": "^6.37.3"
   },
