--- a/centro-medico-app/frontend/app.json
+++ b/centro-medico-app/frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "asocrista-centro-medico",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/asologo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -14,15 +14,22 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.asocrista.centromedico"
+      "bundleIdentifier": "com.asocrista.centromedico",
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "Esta aplicación usa Face ID para una autenticación rápida y segura."
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/asologo.png",
         "backgroundColor": "#2E7D32"
       },
       "package": "com.asocrista.centromedico",
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "USE_BIOMETRIC",
+        "USE_FINGERPRINT"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
