--- a/centro-medico-app/frontend/package.json
+++ b/centro-medico-app/frontend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,29 +17,17 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.12.0",
-    "crypto-js": "^4.2.0",
     "expo": "~54.0.1",
-    "expo-barcode-scanner": "~14.0.1",
-    "expo-constants": "^18.0.8",
-    "expo-device": "~6.0.2",
-    "expo-document-picker": "~12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^15.0.7",
-    "expo-linking": "^8.0.8",
-    "expo-local-authentication": "~14.0.1",
-    "expo-notifications": "~0.28.16",
+    "expo-local-authentication": "^17.0.7",
     "expo-splash-screen": "^31.0.9",
     "expo-status-bar": "~3.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.28.0",
-    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "private": true
