--- a/centro-medico-app/frontend/app.json
+++ b/centro-medico-app/frontend/app.json
@@ -34,10 +34,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "asocrista-centro-medico"
-      }
-    }
+    "extra": {}
   }
 }
