--- a/centro-medico-app/frontend/app.json
+++ b/centro-medico-app/frontend/app.json
@@ -26,11 +26,15 @@
         "backgroundColor": "#2E7D32"
       },
       "package": "com.asocrista.centromedico",
-      "edgeToEdgeEnabled": true,
+      "edgeToEdgeEnabled": false,
+      "softwareKeyboardLayoutMode": "pan",
       "permissions": [
         "USE_BIOMETRIC",
         "USE_FINGERPRINT"
-      ]
+      ],
+      "navigationBar": {
+        "visible": "leanback"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
