--- a/centro-medico-app/backend/package.json
+++ b/centro-medico-app/backend/package.json
@@ -26,7 +26,7 @@
     "mysql2": "^3.11.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.8",
-    "puppeteer": "^24.20.0",
+    "pdfkit": "^0.15.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
